--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   "license": "ISC",
   "dependencies": {
     "cheerio": "^1.0.0-rc.12",
+    "expree": "^2.1.0",
+    "express": "^4.18.2",
     "node-fetch": "^3.3.1"
   }
 }
